src/objects/ADvendio__Targeting__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Description__c</fullName>
        <label>Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Exclude_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Exclude_Countries__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Countries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Targeting Number</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Targeting No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Targeting Numbers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>